www: docs->manual

--- a/www/src/components/Nav.astro
+++ b/www/src/components/Nav.astro
@@ -4,7 +4,7 @@
   <div class="nav-inner">
     <a href="/" class="logo">pdit</a>
     <div class="nav-links">
-      <a href="/docs/">Manual</a>
+      <a href="/manual/">Manual</a>
       <a href="/news/">News</a>
       <a href="https://discord.gg/emNhpW63vq" class="discord" aria-label="Discord">
         <iconify-icon icon="simple-icons:discord" width="20" height="20" aria-hidden="true"></iconify-icon>
