--- a/www/src/pages/news/introducing-pdit.astro
+++ b/www/src/pages/news/introducing-pdit.astro
@@ -28,7 +28,7 @@ export const date = "January 2024";
     <p>Install with pip and run on any Python file:</p>
     <pre><code>pip install pdit
 pdit script.py</code></pre>
-    <p>Check out the <a href="/docs/">Getting Started</a> guide for more details.</p>
+    <p>Check out the <a href="/manual/">Getting Started</a> guide for more details.</p>
   </main>
 </Layout>
 
