--- a/www/src/layouts/Layout.astro
+++ b/www/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Nav from '../components/Nav.astro';
+import Analytics from '@vercel/analytics/astro';
 import '../styles/global.css';
 
 interface Props {
@@ -24,5 +25,6 @@ const { title, description } = Astro.props;
 <body>
   <Nav />
   <slot />
+  <Analytics />
 </body>
 </html>
