--- a/www/src/pages/manual.astro
+++ b/www/src/pages/manual.astro
@@ -45,6 +45,7 @@ import Layout from '../layouts/Layout.astro';
       </ul>
       <h3 id="quick-start">Quick Start</h3>
       <pre><code>pip install pdit
+pdit --demo
 pdit example.py</code></pre>
 
       <h2 id="output">Output</h2>
