--- a/www/src/layouts/Layout.astro
+++ b/www/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title, description } = Astro.props;
   <Nav />
   <slot />
   <footer class="site-footer">
-    <p>Authored by <a href="https://harry.vangberg.name">Harry Vangberg</a> in Aalborg, Denmark.</p>
+    <p>A project by <a href="https://harry.vangberg.name">Harry Vangberg</a>.</p>
   </footer>
   <Analytics />
 </body>
