--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -33,10 +33,10 @@ pdit --demo</code></pre>
     </ul>
     <h3>Rich Output</h3>
     <ul>
-      <li><strong>IPython display</strong> - Rich outputs via <a href="https://ipython.readthedocs.io/en/latest/api/generated/IPython.display.html">IPython.display</a></li>
       <li><strong>Matplotlib</strong> - Inline plot rendering</li>
-      <li><strong>Interactive DataFrames</strong> - Sortable, searchable tables</li>
+      <li><strong>DataFrames</strong> - Sortable, searchable tables</li>
       <li><strong>Markdown</strong> - Format text output with Markdown</li>
+      <li><strong>IPython display</strong> - Rich outputs via <a href="https://ipython.readthedocs.io/en/latest/api/generated/IPython.display.html">IPython.display</a></li>
     </ul>
   </main>
 
