--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -22,6 +22,8 @@ import Layout from '../layouts/Layout.astro';
     <h3>Quick Start</h3>
     <pre><code>pip install "pdit[demo]"
 pdit --demo</code></pre>
+    <p>With <a href="https://docs.astral.sh/uv/">uv</a>:</p>
+    <pre><code>uvx --with "pdit[demo]" pdit --demo</code></pre>
 
     <h2>Features</h2>
     <ul>
