www: include news in navbar

--- a/www/src/components/Nav.astro
+++ b/www/src/components/Nav.astro
@@ -5,6 +5,7 @@
     <a href="/" class="logo">pdit</a>
     <div class="nav-links">
       <a href="/manual/" title="Manual">Manual</a>
+      <a href="/news/" title="News">News</a>
       <a href="https://discord.gg/emNhpW63vq" class="discord" aria-label="Discord" title="Discord">
         <iconify-icon icon="simple-icons:discord" width="20" height="20" aria-hidden="true"></iconify-icon>
       </a>
