--- a/www/src/pages/manual.astro
+++ b/www/src/pages/manual.astro
@@ -66,7 +66,7 @@ plt.show()</code></pre>
 """
 
 name = "pdit"
-f"Welcome to **{name}**"</code></pre>
+f"Welcome to **{'{name}'}**"</code></pre>
 
       <h3 id="html">HTML</h3>
       <p>Rich HTML output is supported for objects that implement <code>_repr_html_()</code>; see note: <a href="https://ipython.readthedocs.io/en/latest/api/generated/IPython.display.html#IPython.display.display">IPython.display.display</a>.</p>
